fix: add wrap to long text with Hottext

--- a/views/scss/qti/_hottext.scss
+++ b/views/scss/qti/_hottext.scss
@@ -18,6 +18,7 @@
         .qti-flow-container {
             p {
                 display: flex;
+                flex-wrap: wrap;
             }
         }
     }
